[package]
name = "basanos-catcher"
version = "0.0.1"
edition = "2024"
description = "catcher a image to the butcher for basanos"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1"
