[package]
name = "basanos-catcher"
version = "0.0.1"
edition = "2024"
description = "catcher a image to the butcher for basanos"

[dependencies]
ron = "0.12"
toml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

clap = { version = "4", features = ["derive", "env"] }
config = "0.15"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "0.5"

anyhow = "1"
eyre = "0.6"
color-eyre = "0.6"

dirs = "6"
glob = "0.3"
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# [lib]
# name = "basanos_catcher"
# path = "src/lib.rs"
