[package]
name = "basanos-deliver"
version = "0.1.0"
edition = "2024"
description = "deliver a image to the butcher for basanos"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1"
